--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- Navigation bar -->
       <nav>
         <div class="logo">
-          <img src="./images/ic-logo.svg" alt="Colmar academy logo" />
+          <img src="./photos/ic-logo.svg" alt="Colmar academy logo" />
           <p>Colmar</p>
           <span>Academy</span>
         </div>
@@ -33,10 +33,10 @@
             ><img src="./photos/ic-logo.svg" alt="Colmar academy logo"
           /></a>
           <a href="#"
-            ><img src="photos/ic-on-campus.svg"On Campus icon"
+            ><img src="./photos/ic-on-campus.svg" alt="On Campus icon"
           /></a>
-          <a href=""><img src="photos/ic-online.svg" alt="Online icon" /></a>
-          <a href=""><img src="photos/ic-login.svg" alt="Login icon" /></a>
+          <a href=""><img src="./photos/ic-online.svg" alt="Online icon" /></a>
+          <a href=""><img src="./photos/ic-login.svg" alt="Login icon" /></a>
         </div>
       </nav>
     </header>
@@ -45,7 +45,7 @@
       <section class="hero-container">
         <div class="hero-left">
           <img
-            src="photos/banner.jpg"
+            src="./photos/banner.jpg"
             alt="Banner image of three people sitting together"
           />
         </div>
@@ -58,7 +58,7 @@
       <!-- News section -->
       <section class="news-container">
         <article class="news-left">
-          <img src="photos/information-campus.jpg"A men reading a book" />
+          <img src="./photos/information-main.jpg" alt="A men reading a book" />
           <div class="news-left-info">
             <h2>It doesn't hurt to keep practicing</h2>
             <p>
@@ -75,12 +75,12 @@
             <div class="orientation-img">
               <img
                 class="orientation-left-desktop"
-                src="photos/information-guest-lecture.jpg"
+                src="./photos/information-orientation.jpg"
                 alt="Shadows of a few people"
               />
               <img
                 class="orientation-left-mobile"
-                src="photos/information-orientation.jpg"
+                src="./photos/information-orientation-mobile.jpg"
                 alt="Shadows of a few people"
               />
             </div>
@@ -99,7 +99,7 @@
               />
               <img
                 class="campus-left-mobile"
-                src="photos/information-campus-mobile.jpg"
+                src="./photos/information-campus-mobile.jpg"
                 alt="A group of people sitting around the table"
               />
             </div>
@@ -113,12 +113,12 @@
             <div class="guest-img">
               <img
                 class="guest-left-desktop"
-                src="photos/information-guest-lecture.jpg"
+                src="./photos/information-guest-lecture.jpg"
                 alt="Portrait of a professor"
               />
               <img
                 class="guest-left-mobile"
-                src="photos/information-guest-lecture-mobile.jpg"
+                src="./photos/information-guest-lecture-mobile.jpg"
                 alt="Portrait of a professor"
               />
             </div>
@@ -139,7 +139,7 @@
           <div class="sl-1">
             <div class="sl-img">
               <img
-                src="photos/course-software.jpg"
+                src="./photos/course-software.jpg"
                 alt="Two computer screen on a table"
               />
             </div>
@@ -152,7 +152,7 @@
           <div class="sl-2">
             <div class="sl-img">
               <img
-                src="photos/course-computer-art.jpg"
+                src="./photos/course-computer-art.jpg"
                 alt="Someone holding a mobile phone and another drinking coffee"
               />
             </div>
@@ -165,7 +165,7 @@
           <div class="sl-3">
             <div class="sl-img">
               <img
-                src="photos/course-design.jpg"
+                src="./photos/course-design.jpg"
                 alt="A person holding a camera"
               />
             </div>
@@ -178,7 +178,7 @@
           <div class="sl-4">
             <div class="sl-img">
               <img
-                src="photos/course-data.jpg"
+                src="./photos/course-data.jpg"
                 alt="A laptop with dashboard statistic displayed on screen"
               />
             </div>
@@ -191,7 +191,7 @@
           <div class="sl-5">
             <div class="sl-img">
               <img
-                src="photos/course-business.jpg"
+                src="./photos/course-business.jpg"
                 alt="Chess pieces on a table"
               />
             </div>
@@ -204,7 +204,7 @@
           <div class="sl-6">
             <div class="sl-img">
               <img
-                src="photos/course-marketing.jpg"
+                src="./photos/course-marketing.jpg"
                 alt="Someone using apple watch wrapped around their wrist"
               />
             </div>
@@ -264,7 +264,7 @@
             <div class="fisma">
               <div class="fisma-img">
                 <img
-                  src="photos/thesis-fisma.jpg"
+                  src="./photos/thesis-fisma.jpg"
                   alt="Someone highlighting text on paper"
                 />
               </div>
@@ -276,7 +276,7 @@
             <div class="now-and-then">
               <div class="nt-img">
                 <img
-                  src="photos/thesis-now-and-then.jpg"
+                  src="./photos/thesis-now-and-then.jpg"
                   alt="Image of empire state building"
                 />
               </div>
